dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
        - args:
            - npm
            - start
            - --
            - --host
            - 0.0.0.0
          image: gcr.io/banderaestate/saleor-platform_dashboard 
          name: dashboard
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
