db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/saleorplatform_saleor-backend-tier: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: saleor
            - name: POSTGRES_USER
              value: saleor
          image: library/postgres:11.1-alpine
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: saleorplatform-saleor-db
      restartPolicy: Always
      volumes:
        - name: saleorplatform-saleor-db
          persistentVolumeClaim:
            claimName: saleorplatform-saleor-db
status: {}
