redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/saleorplatform_saleor-backend-tier: "true"
        io.kompose.service: redis
    spec:
      containers:
        - image: library/redis:5.0-alpine
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: saleorplatform-saleor-redis
      restartPolicy: Always
      volumes:
        - name: saleorplatform-saleor-redis
          persistentVolumeClaim:
            claimName: saleorplatform-saleor-redis
status: {}
