worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/saleorplatform_saleor-backend-tier: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - celery
            - -A
            - saleor
            - --app=saleor.celeryconf:app
            - worker
            - --loglevel=info
          image: gcr.io/banderaestate/saleor-platform_worker 
          name: worker
          resources: {}
      restartPolicy: Always
status: {}
